@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram

abstract class Media{
-String title
-int releaseYear
-int rating
-List<Category>categories
-FileIO
-TextUI
+ play()
+ pause()
}

class Menu{
-Arraylist<User>users
-Arraylist<Media>media
+ start()
+ register()
+ login()
}

class User{
-String username
-int password
-List<Media> watchedMedia
-List<Media> savedMedia
}

class Film{
-int duration
}

class MenuActions{
-FileIO
-TextUI
+ searchMedia()
+ searchMediaCategory()
+ showWatchedMedia()
+ showsavedMedia()
+ showMenu()
}

class Series{
-List<Seasons>season
}
class Season{
-int seasonNumber
-List<Episode>episodes
}
class Episode{
-String title
-int duration
-int episodeNumber
}

enum Category{
CRIME
 WAR
 DRAMA
 FAMILY
 ROMANCE
 SCI_FI
 FANTASY
 MYSTERY
 THRILLER
 ADVENTURE
 HISTORY
 BIOGRAPHY
 HORROR
 ANIMATION
 ACTION
 WESTERN
 DOCUMENTARY
 TALK_SHOW
 SPORT
}

class FileIO{
- String filmFile
- String seriesFile
- String userFile
+ List<Film> loadFilm()
+ List<Series> loadSeries()
+ List<User> loadUsers()
+ saveUserData(List<User>userList)
}

class TextUI{
- Scanner scan
+ startMessage()
+ getUserInput()
+ promptUsername()
+ promptPassword()
}

Media *-- Film
Media *-- Series
Series --> Season
Season --> Episode
User <|-- Media
Menu <|-- User



Menu --> MenuActions

MenuActions --> FileIO
MenuActions --> TextUI



Episode --* Media
Media -----> Category



@enduml